Adding Linkedin Links

--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
       name="description"
       content="Deploy your websites in less than 60 seconds."
     />
-    <meta
-      property="og:title"
-      content="Moshify - Deploy your websites in less than 60 seconds."
-    />
-    <meta
-      property="og:description"
-      content="Moshify is an imginary cloud hosting company. It's designed to teach people how to build modern websites using HTML5 and CSS3. To learn how to build this website from scratch, get the Ultimate HTML and CSS course on codewithmosh.com."
-    />
+
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://moshified.com/moshify.jpg" />
     <meta property="og:url" content="http://moshified.com" />
@@ -41,16 +34,32 @@
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item">
-            <a target="_blank" href="https://codewithmosh.com">Hosting</a>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/seline-d-a61065277/"
+              >Hosting</a
+            >
           </li>
           <li class="nav__item">
-            <a target="_blank" href="https://codewithmosh.com">VPS</a>
+            <a
+              target="_blank"
+              href=" https://www.linkedin.com/in/seline-d-a61065277/"
+              >VPS</a
+            >
           </li>
           <li class="nav__item">
-            <a target="_blank" href="https://codewithmosh.com">Domain</a>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/seline-d-a61065277/ "
+              >Domain</a
+            >
           </li>
           <li class="nav__item">
-            <a target="_blank" href="https://codewithmosh.com">Pricing</a>
+            <a
+              target="_blank"
+              href=" https://www.linkedin.com/in/seline-d-a61065277/"
+              >Pricing</a
+            >
           </li>
         </ul>
       </nav>
@@ -66,7 +75,7 @@
           </p>
           <a
             target="_blank"
-            href="https://codewithmosh.com"
+            href=" https://www.linkedin.com/in/seline-d-a61065277/"
             class="btn btn--accent btn--stretched"
             >Get Started</a
           >
@@ -101,8 +110,10 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use href="images/sprite.svg#search"></use></svg
-          >Search
+            <use href="images/sprite.svg#search"></use>
+          </svg>
+
+          Search
         </button>
       </div>
       <ul class="list block-domain__prices">
@@ -198,7 +209,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
             obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
           </p>
-          <a href="https://codewithmosh.com" target="_blank" class="link-arrow"
+          <a
+            href=" https://www.linkedin.com/in/seline-d-a61065277/"
+            target="_blank"
+            class="link-arrow"
             >Learn More</a
           >
         </div>
@@ -226,7 +240,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
             obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
           </p>
-          <a href="https://codewithmosh.com" target="_blank" class="link-arrow"
+          <a
+            href="https://www.linkedin.com/in/seline-d-a61065277/ "
+            target="_blank"
+            class="link-arrow"
             >Learn More</a
           >
         </div>
@@ -254,7 +271,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
             obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
           </p>
-          <a href="https://codewithmosh.com" target="_blank" class="link-arrow"
+          <a
+            href=" https://www.linkedin.com/in/seline-d-a61065277/"
+            target="_blank"
+            class="link-arrow"
             >Learn More</a
           >
         </div>
@@ -282,7 +302,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
             obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
           </p>
-          <a href="https://codewithmosh.com" target="_blank" class="link-arrow"
+          <a
+            href="https://www.linkedin.com/in/seline-d-a61065277/ "
+            target="_blank"
+            class="link-arrow"
             >Learn More</a
           >
         </div>
@@ -428,7 +451,7 @@
           </div>
           <a
             target="_blank"
-            href="https://codewithmosh.com"
+            href="https://www.linkedin.com/in/seline-d-a61065277/ "
             class="btn btn--secondary btn--stretched"
             >Get Started</a
           >
