--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://moshified.com/moshify.jpg" />
-    <meta property="og:url" content="http://moshified.com" />
-    <title>Moshify - Go Online for Just $9</title>
+    <meta property="og:url" content=" " />
+    <title>Synthify- Go Online for Just $9</title>
     <link rel="icon" href="images/favicon-sm.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon-md.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="images/favicon-lg.png" />
@@ -26,7 +26,7 @@
   <body>
     <header>
       <nav class="nav collapsible">
-        <a aria-label="Moshify" class="nav__brand" href="/"
+        <a aria-label="Synthify" class="nav__brand" href="/"
           ><img src="images/logo.svg" alt=""
         /></a>
         <svg class="icon icon--white nav__toggler">
@@ -68,7 +68,7 @@
       <div class="container grid grid--1x2">
         <header class="block__header hero__content">
           <h1 data-aos="zoom-in-up" class="block__heading">
-            Cloud Hosting for Pros
+            Cloud Hosting, made easy
           </h1>
           <p class="hero__tagline">
             Elevate Your Enterprise: Precision-Engineered Cloud Hosting
